--- a/ttlm/notebook.ipynb
+++ b/ttlm/notebook.ipynb
@@ -97,7 +97,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "wy9trgA-3kPt",
+        "outputId": "4d2ec858-baa6-43ae-ae04-031b851bd011",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "wy9trgA-3kPt",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/drive/MyDrive/llm-course/ttlm\n",
+        "!pip install uv\n",
+        "!uv sync\n"
+      ],
+      "metadata": {
+        "id": "6wF_xSsd3tQB",
+        "outputId": "af3d4d96-384b-4a0d-b592-4eccc5c4e9ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "6wF_xSsd3tQB",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/llm-course/ttlm\n",
+            "Requirement already satisfied: uv in /usr/local/lib/python3.12/dist-packages (0.9.7)\n",
+            "\u001b[1m\u001b[33mwarning\u001b[39m\u001b[0m\u001b[1m:\u001b[0m \u001b[1mIgnoring existing virtual environment linked to non-existent Python interpreter: \u001b[36m.venv/bin/python3\u001b[39m -> \u001b[36mpython\u001b[39m\u001b[0m\n",
+            "Using CPython \u001b[36m3.14.0\u001b[39m\n",
+            "^C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "c8bef70e",
       "metadata": {
         "vscode": {
@@ -107,23 +162,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c8bef70e",
-        "outputId": "41bd7c70-b4ba-41b4-c8c8-70cf163a66c9"
+        "outputId": "ec0e65be-6781-4633-e1c7-54ebbc2bfeb0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Traceback (most recent call last):\n",
-            "  File \u001b[35m\"<frozen runpy>\"\u001b[0m, line \u001b[35m198\u001b[0m, in \u001b[35m_run_module_as_main\u001b[0m\n",
-            "  File \u001b[35m\"<frozen runpy>\"\u001b[0m, line \u001b[35m88\u001b[0m, in \u001b[35m_run_code\u001b[0m\n",
-            "  File \u001b[35m\"/content/drive/MyDrive/llm-course/ttlm/scripts/pretrain.py\"\u001b[0m, line \u001b[35m10\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
-            "    import torch\n",
-            "  File \u001b[35m\"/content/drive/MyDrive/llm-course/ttlm/.venv/lib/python3.14/site-packages/torch/__init__.py\"\u001b[0m, line \u001b[35m427\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
-            "    \u001b[1;31mfrom torch._C import *\u001b[0m  # noqa: F403\n",
-            "    \u001b[1;31m^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
-            "  File \u001b[35m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[35m466\u001b[0m, in \u001b[35m_lock_unlock_module\u001b[0m\n",
-            "\u001b[1;35mKeyboardInterrupt\u001b[0m\n"
+            "Using CPython \u001b[36m3.14.0\u001b[39m\n"
           ]
         }
       ],
@@ -138,7 +184,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "A100"
     },
     "kernelspec": {
       "name": "python3",
